# ComfyUI_FL-MCP

./: .comfyignore  .env.example  .gitignore  .variables.json  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  ren_daemon.py  requirements.txt
.github/workflows/: ci.yml
agents/: agent.md
assets/: fl-mcp-demo.webm
backend/: __init__.py  agent.py  calc.py  chat_broadcaster.py  chat_config.py  chat_prompt.md  chat_routes.py  chat_runtime.py  chat_security.py  chat_store.py  claude_code_runner.py  claude_subscription.py  codex_subscription.py  coding_tools.py  comfy_manager.py  comfy_models.py  comfy_supervisor.py  comfy_tools.py  config.py  conversation_store.py  manager.py  mcp_server.py  model_defaults.py  models.py  node_library.py  path_resolver.py  process_utils.py  provider_config.py  server.py  server_runner.py  sysinfo.py  version.py
frontend/: session_manager.js  ws_client.js
notes/: diagrams.md  looking_forward.md  project_structure.md  roadmap.md
notes/connect/: analysis.md  implementation.md  investigation.md  proposal.md
notes/create_nodes/: analysis.md  disconnect_analysis.md  fix_review.md  investigation.md
notes/error_feedback/: implementation.md  research.md
notes/expressing_tools/: analysis.md  ideas.md  implementation.md  investigation.md
notes/expressing_tools/debug1/: deep_investigation.md  implementation.md  investigation.md
notes/features/: start_button.md
notes/get_selected_nodes_feature/: implementation.md  investigation.md
notes/implementation/: 00_implementation_summary.md  01_websocket_protocol.md  02_query_dsl.md  03_project_structure.md  04_mcp_tools.md  05_agent_setup.md  06_frontend_ui.md  progress.md
notes/manager/: final_implementation.md  implementation.md  investigation.md  refinement.md  research.md
notes/mcp_persist/: idea.md  implementation.md  investigation.md  verification.md
notes/mcp_refine/: analysis.md  implementation.md
notes/modify_layout/: implementation.md  investigation.md
notes/pwa/: idea.md  implementation.md  investigation.md
notes/sysinfo/: analysis.md  implementation.md
notes/tool_execution/: implementation_summary.md
skills/workflow-assistant/: SKILL.md
skills/workflow-assistant/agents/: openai.yaml
skills/workflow-assistant/references/: comfy-workflow-patterns.md
tests/: conftest.py  test_bridge_integration.py  test_chat_config.py  test_chat_routes.py  test_chat_runtime.py  test_chat_security.py  test_chat_store.py  test_claude_subscription.py  test_codex_subscription.py  test_connection_manager.py  test_mcp_websocket_client.py  test_process_utils.py  test_server_runner.py  test_version.py
tests/js/: chat_client.test.mjs  chat_ui_helpers.test.mjs  fit_view.test.mjs  node_placement.test.mjs  ren_ui_contract.test.mjs  ws_client.test.mjs
web/js/: chat_client.js  chat_panel.js  chat_ui.js  chat_ui_helpers.js  extension.js  fit_view.js  fl_api.js  layout_engine.js  node_placement.js  query_executor.js  safe_markdown.js  style.css  tool_activity.js  tool_executor.js  ws_client.js
web/js/_components/: MessageBubble.js  ToolChainBreadcrumb.js
web/pwa/: index.html  manifest.json  styles.css
