[project]
name = "comfyui-fl-mcp"
version = "0.1.0"
description = "Local MCP server and browser bridge for ComfyUI. Inspect workflows, edit graphs, queue generations, manage models, and connect MCP-compatible agents to your local ComfyUI setup."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "websockets",
    "fastmcp",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "Pillow",
    "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_FL-MCP"
Homepage = "https://www.patreon.com/Machinedelusions"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI FL-MCP"
Icon = "https://avatars.githubusercontent.com/u/55672949"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=backend --cov-report=term-missing"
